--- a/package.json
+++ b/package.json
@@ -13,10 +13,18 @@
     "@types/node": "8.10.45",
     "typescript": "^3.3.3333",
     "ts-node": "^8.1.0",
-    "aws-cdk": "^0.34.0"
+    "aws-cdk": "^0.36.0"
   },
   "dependencies": {
-    "@aws-cdk/cdk": "^0.34.0",
+    "@aws-cdk/aws-apigateway": "^0.36.2",
+    "@aws-cdk/aws-ecs": "^0.36.2",
+    "@aws-cdk/aws-iam": "^0.36.2",
+    "@aws-cdk/aws-lambda": "^0.36.2",
+    "@aws-cdk/aws-s3": "^0.36.2",
+    "@aws-cdk/aws-ses": "^0.36.2",
+    "@aws-cdk/aws-sns": "^0.36.2",
+    "@aws-cdk/aws-sqs": "^0.36.2",
+    "@aws-cdk/cdk": "^0.36.1",
     "source-map-support": "^0.5.9"
   }
 }
